--- a/app/src/main/res/layout/activity_search_resault.xml
+++ b/app/src/main/res/layout/activity_search_resault.xml
@@ -20,134 +20,17 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/search_rcv"
         android:layout_width="409dp"
         android:layout_height="500dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/res_title"
-        app:layout_constraintVertical_bias="0.455">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-            <androidx.cardview.widget.CardView
-                android:clickable="true"
-                android:onClick="cardClick"
-                android:layout_margin="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="12dp"
-                app:layout_constraintEnd_toEndOf="parent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-
-                    android:layout_height="wrap_content"
-                    android:background="@color/myred"
-
-                    android:elevation="10dp"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <LinearLayout
-
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <TextView
-android:id="@+id/time"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textAlignment="center"
-                            android:text="09:00"
-                            android:textColor="@color/background"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textAlignment="center"
-                            android:text="today"
-                            android:textColor="@color/background"
-                            android:textSize="18sp"
-
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-                        <TextView
-
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="El_oued"
-                            android:textAlignment="center"
-                            android:textColor="@color/background"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="-->"
-                            android:textAlignment="center"
-                            android:textColor="@color/background"
-                            android:textSize="25sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-android:id="@+id/desti"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Tebessa"
-                            android:textAlignment="center"
-                            android:textColor="@color/background"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
+        >
 
 
-                    <TextView
-android:id="@+id/places"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="5 places availlable"
-                        android:textAlignment="center"
-                        android:textColor="@color/myblue"
-                        android:textSize="25sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-    </ScrollView>
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
